doc: orderbl done.

--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -7,6 +7,8 @@
 | 修改人员 | 日期      | 修改原因                      | 版本号       |
 | :------: | --------- | --------------------------| ------------ |
 |  黄婉红  | 2020.06.13 | 添加了引言至体系结构设计描述部分 | V1.0.0 |
+| 黄婉红  | 2020.06.22| 添加adminbl和userbl模块部分| V1.0.1|
+| 王海辰| 2020.06.23 | 添加orderbl模块部分|V1.0.2|
 
 ## 目录
 <!-- TOC -->
@@ -325,6 +327,7 @@ AdminServiceImpl的接口规范如下表所示：
 ![addManager动态模型](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B7%BB%E5%8A%A0%E7%AE%A1%E7%90%86%E5%91%98.png)
 
 下图表明了NJUSE酒店管理系统中，当网站管理员填需要获取用户信息时，网站管理员业务逻辑处理的相关对象之间的协作。（获取网站营销人员信息与获取酒店管理人员信息顺序相同，图略）
+
 ![getAllManagers](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98.png)
 
 下图表明了NJUSE酒店管理系统中，当网站管理员填需要删除用户信息时，网站管理员业务逻辑处理的相关对象之间的协作。
@@ -340,30 +343,52 @@ AdminServiceImpl的接口规范如下表所示：
 
 #### 4.1.2 couponbl模块(qzx)
 #### 4.1.3 hotelbl模块(xzq)
-#### 4.1.4 orderbl模块(whc)
+#### 4.1.4 orderbl模块
 
 ##### 需要的服务
+（1）模块描述
 
-| 服务名|服务|
-|:-----:|:----:|
-|OrderServic.addOrder(OrderVO orderVO)|加入一个新的订单|
-|OrderService.getallorders()|获得所有订单|
-|OrderService.annulOrder(int orderid)|撤销一个订单|
-|OrderService.processOrder(int orderid)|处理订单|
-|OrderService.retrieveOrder(Integer orderId)|获取特定一个订单|
+    orderbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
+    orderbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
 
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.order.OrderController接口，controller.order.OrderController接口通过调用
+bl.order.OrderService接口实现。业务逻辑层和数据层之间添加data.order.OrderMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+orderbl模块的设计如下图所示：
+![orderbl模块设计图]()
+
+orderbl模块各个类的职责如下表所示：
+
+|  模块 |  职责 |
+| :-----: | :-----: |
+|OrderService|接口类，负责提供订单相关操作的接口|
+|OrderServiceImpl|负责实现订单相关操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
+|Order|订单的领域模型对象，拥有订单的所有信息|
+
+
+（3）模块内部类的接口规范
+OrderServiceImpl的接口规范如下表所示：
 
 <table border="3">
-    <caption>OrderService提供的服务（供接口）</caption>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
     <tr>
         <th> </th>
         <th> </th>
         <th> </th>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.add </td>
+        <td rowspan="3"> OrderServiceImpl.addOrder </td>
         <td> 语法</td>
-        <td> ResponseVO addOrder(OrderVO orderVO);</td>
+        <td> public ResponseVO addOrder(OrderVO orderVO);</td>
     </tr>
     <tr>
         <td> 前置条件</td>
@@ -371,12 +396,12 @@ AdminServiceImpl的接口规范如下表所示：
     </tr>
     <tr>
         <td>后置条件 </td>
-        <td> 在数据库中增加一个o记录</td>
+        <td> 在数据库中增加一个订单记录</td>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.getallorders </td>
+        <td rowspan="3"> OrderServiceImpl.getAllOrders </td>
         <td> 语法</td>
-        <td> List getAllOrders();</td>
+        <td>  public List&lt;Order&gt; getAllOrders();</td>
     </tr>
     <tr>
         <td> 前置条件</td>
@@ -384,12 +409,12 @@ AdminServiceImpl的接口规范如下表所示：
     </tr>
     <tr>
         <td>后置条件 </td>
-        <td> 按List返回所有订单信息</td>
+        <td> 列表形式返回所有订单信息</td>
     </tr>    
     <tr>
-        <td rowspan="3"> OrderService.getUserOrders </td>
+        <td rowspan="3"> OrderServiceImpl.getUserOrders </td>
         <td> 语法</td>
-        <td> List&lt;Order&gt; getUserOrders(int userid);</td>
+        <td> public List&lt;Order&gt; getUserOrders(int userid);</td>
     </tr>
     <tr>
         <td> 前置条件</td>
@@ -397,12 +422,12 @@ AdminServiceImpl的接口规范如下表所示：
     </tr>
     <tr>
         <td>后置条件 </td>
-        <td> 返回该user的订单信息</td>
+        <td> 列表形式返回该user的所有订单信息</td>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.annul </td>
+        <td rowspan="3"> OrderServiceImpl.annulOrder </td>
         <td> 语法</td>
-        <td> ResponseVO annulOrder(int orderid);</td>
+        <td> public ResponseVO annulOrder(int orderid);</td>
     </tr>
     <tr>
         <td> 前置条件</td>
@@ -415,30 +440,167 @@ AdminServiceImpl的接口规范如下表所示：
     <tr>
         <td rowspan="3"> OrderService.processOrder </td>
         <td> 语法</td>
-        <td> ResponseVO processOrder(int orderid);</td>
+        <td> public ResponseVO processOrder(int orderid);</td>
     </tr>
     <tr>
         <td> 前置条件</td>
-        <td> 此orderid在数据库中存在 </td>
+        <td> 此orderid存在 </td>
     </tr>
     <tr>
         <td>后置条件 </td>
-        <td> 执行订单</td>
+        <td> 修改订单状态为已执行</td>
     </tr>
     <tr>
-        <td rowspan="3"> Order.show </td>
+        <td rowspan="3"> OrderServiceImpl.retrieveOrder </td>
         <td> 语法</td>
-        <td> Order retrieveOrder(Integer orderId);</td>
+        <td> public Order retrieveOrder(Integer orderId);</td>
     </tr>
     <tr>
         <td> 前置条件</td>
-        <td> 此orderid在数据库中存在 </td>
+        <td> 此orderId在数据库中存在 </td>
     </tr>
     <tr>
         <td>后置条件 </td>
         <td> 以Order形式获取该特定订单的全部信息</td>
-    </tr>                           
+    </tr>  
+        <tr>
+        <td rowspan="3"> OrderServiceImpl.retrieveHotelOrders </td>
+        <td> 语法</td>
+        <td> public List&lt;Order&gt; retrieveHotelOrders(Integer hotelId);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 此hotelId在数据库中存在 </td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 以列表形式返回该酒店的全部订单信息</td>
+    </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.orderVO</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>订单表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.addOrder(Order order)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个用订单持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>hotelService.updateRoomNum(Integer hotelId, String roomType,Integer rooms)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>添加订单后更新酒店房间数量</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> orderMapper.getAllOrders()</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>返回所有订单</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.getUserOrders(int userid)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         返回userid对应用户的所有订单
+      </td>
+    </tr> 
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.annulOrder(int orderid)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         删除orderid对应的订单信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.processOrder(int orderid)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         修改orderid对应的订单状态
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.getOrderById(Integer orderId)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         返回orderId对应的订单信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>orderMapper.getHotelOrders(Integer hotelId)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         返回hotelId对应的酒店的所有订单信息
+      </td>
+    </tr>                     
 </table>
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的订单表单时，订单业务逻辑处理的相关对象之间的协作。
+
+![addOrder](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E7%94%9F%E6%88%90%E8%AE%A2%E5%8D%95.png)
+
+下图表明了NJUSE酒店管理系统中，当网站营销人员需要获取所有订单信息时，订单业务逻辑处理的相关对象之间的协作。
+![getAllOrders]( https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E6%89%80%E6%9C%89%E8%AE%A2%E5%8D%95.png)
+
+下图表明了NJUSE酒店管理系统中，当客户需要查看自己的订单信息时，订单业务逻辑处理的相关对象之间的协作。
+![getUserOrders](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E9%A1%BE%E5%AE%A2%E8%AE%A2%E5%8D%95.png)
+
+下图表明了NJUSE酒店管理系统中，当客户选择撤销已预订的订单时，订单业务逻辑处理的相关对象之间的协作。
+![annulOrder](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%92%A4%E9%94%80%E8%AE%A2%E5%8D%95.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员执行酒店订单时，订单业务逻辑处理的相关对象之间的协作。
+![processOrder](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%89%A7%E8%A1%8C%E8%AE%A2%E5%8D%95.png)
+
+下图表明了NJUSE酒店管理系统中，当客户或酒店管理员需要查看订单详情时，订单业务逻辑处理的相关对象之间的协作。
+![retrieveOrder](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E8%AE%A2%E5%8D%95%E8%AF%A6%E6%83%85.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员需要查看本酒店所有订单时，订单业务逻辑处理的相关对象之间的协作。
+![retrieveHotelOrders](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E9%85%92%E5%BA%97%E8%AE%A2%E5%8D%95.png)
+
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
+
+
 
 #### 4.1.5 userbl模块
 （1）模块描述
