feat: hotel done

--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -767,15 +767,15 @@ HotelServiceImpl的接口规范如下表所示：
     </tr>
     <tr>
       <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
-        <p>HotelMapper.getAllManagers()</p>
+        <p>HotelMapper.updateRoomNum(Integer hotelId, String roomType, Integer rooms)</p>
       </td>
       <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
-        <p>以列表形式获取所有身份类型为HotelManager的用户单一持久化对象</p>
+        <p>以列表形式获取所有身份类型为Hotel的用户单一持久化对象</p>
       </td>
     </tr>
     <tr>
       <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
-        <p> HotelMapper.moveUser(int userId)</p>
+        <p> HotelMapper.getRoomCurNum(Integer hotelId, String roomType)</p>
       </td>
       <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
         <p>根据酒店ID删除一个用户持久化对象</p>
@@ -789,12 +789,247 @@ HotelServiceImpl的接口规范如下表所示：
         <p>根据用户ID删除一个用户持久化对象</p>
       </td>
     </tr>
+  </tbody>
+</table>
+
+RoomServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        RoomServiceImpl.retrieveHotelRoomInfo
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+        public List<HotelRoom> retrieveHotelRoomInfo(Integer hotelId)
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        数据库中存在对应的房间信息
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        更新房间id对应的房间信息
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        RoomServiceImpl.insertRoomInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public void insertRoomInfo(HotelRoom hotelRoom);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        数据库中存在相应的房间数据
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        插入房间信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        RoomServiceImpl.updateRoomInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public ResponseVO updateRoomInfo(Integer id,Double price,Integer total,Integer curNum)
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的房间id</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>更新房间id对应的房间信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>RoomServiceImpl.getRoomCurNum</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public int getRoomCurNum(Integer hotelId, String roomType)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库存在相应的房间数据</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>获取当前的房间Num</p>
+      </td>
+    </tr> 
+     <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            RoomServiceImpl.moveRoom
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            public RoomVO moveRoom(Integer roomId)
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的房间id</p>
+          </td>
+     </tr>
+    <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>删除房间id对应的详细信息</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            <p>RoomServiceImpl.getRoomInfo</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>public HotelRoom getRoomInfo(Integer roomId);</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应房间id的详细信息</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>以列表形式返回房间id的详细信息</p>
+          </td>
+        </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.userForm</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>用户信息表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>RoomMapper.retrieveHotelRoomInfo(Integer hotelId)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>获取房间信息</p>
+      </td>
+    </tr>
     <tr>
       <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
-        <p>HotelMapper.changeHotelManager(int hotelId,Integer managerId)</p>
+        <p>RoomMapper.updateRoomInfo(Integer id,Double price,Integer total,Integer curNum)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>以列表形式获取所有身份类型为Room的用户单一持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> RoomMapper.insertRoomInfo(HotelRoom hotelRoom)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>插入一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> RoomMapper.moveRoom(Integer roomId)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据用户ID删除一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>RoomMapper.getRoomInfo(Integer roomId)</p>
       </td>
       <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
-         指定managerId为hotelId对应酒店对象的管理员ID属性值
+         返回房间的详细信息
       </td>
     </tr>
   </tbody>
