--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -9,6 +9,7 @@
 |  黄婉红  | 2020.06.13 | 添加了引言至体系结构设计描述部分 | V1.0.0 |
 | 黄婉红  | 2020.06.22| 添加adminbl和userbl模块部分| V1.0.1|
 | 王海辰| 2020.06.23 | 添加orderbl模块部分|V1.0.2|
+| 项卓奇| 2020.06.23 | 添加hotelbl模块部分|V1.0.3|
 
 ## 目录
 <!-- TOC -->
@@ -343,6 +344,772 @@ AdminServiceImpl的接口规范如下表所示：
 
 #### 4.1.2 couponbl模块(qzx)
 #### 4.1.3 hotelbl模块(xzq)
+（1）模块描述
+
+    hotelbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
+    hotelbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
+
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.hotel.HotelController接口，controller.hotel.HotelController接口通过调用
+bl.hotel.HotelService，bl.hotel.RoomService接口实现。业务逻辑层和数据层之间添加data.hotel.HotelMapper，data.hotel.RoomMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+hotelbl模块的设计如下图所示：
+![hotelbl模块设计图]()
+
+hotelbl模块各个类的职责如下表所示：
+
+|  模块 |  职责 |
+| :-----: | :-----: |
+|HotelService|接口类，负责提供网站管理员相关操作的接口|
+|RoomService|接口类，负责提供酒店管理员相关操作的接口|
+|HotelServiceImpl|负责实现网站管理员相关操作|
+|RoomServiceImpl|负责实现酒店管理员相关操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
+
+（3）模块内部类的接口规范
+HotelServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        HotelServiceImpl.addHotel
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+        public void addHotel(HotelVO hotelVO);
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        已创建一个hotelVO对象，并且输入符合输入规则
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        添加一个新的酒店对象，并返回用户列表。
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        HotelServiceImpl.updateRoomNum
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public void updateRoomNum(Integer hotelId, String roomType, Integer rooms);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        存在相应的列表数据
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        以列表形式返回所有房间信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        HotelServiceImpl.getRoomCurNum
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public int getRoomCurNum(Integer hotelId, String roomType)
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的房间Num</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>返回房间Num对应的房间类型</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.retrieveHotels</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<HotelVO> retrieveHotels()</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>存在相应的列表数据</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>以列表形式返回所有酒店信息</p>
+      </td>
+    </tr> 
+     <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            HotelServiceImpl.retrieveHotelDetails
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            public HotelVO retrieveHotelDetails(Integer hotelId)
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的酒店id</p>
+          </td>
+     </tr>
+    <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>返回酒店id对应的详细信息</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            <p>HotelServiceImpl.retrieveHotelDetailByManagerId</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>public HotelVO retrieveHotelDetailByManagerId(int userid);</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的酒店ID和酒店管理员ID</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>以列表形式返回酒店id的详细信息</p>
+          </td>
+        </tr> 
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.getHotelOrders</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<Order> getHotelOrders(Integer hotelId)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在酒店id对应的酒店</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>以列表形式传递指令信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.moveHotel</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public ResponseVO moveHotel(Integer hotelId)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在酒店ID对应的酒店</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>删除酒店id对应的酒店</p>
+      </td>
+    </tr>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.updateHotelInfo</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public ResponseVO updateHotelInfo(int managerid, String bizRegion, String address, String hotelDescription, String phoneNumber)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在酒店ID对应的酒店</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>更新酒店id对应的详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.getHotelByBizAndCity</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public List<HotelVO> getHotelByBizAndCity(String bizRegion, String city)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在酒店ID对应的酒店</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>更新酒店id对应的商圈和城市信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.sortByStar</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public List<HotelVO> sortByStar(List<HotelVO> hotels)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在相应酒店列表信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>按星级排序展示酒店</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.retrieveCities</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<String> retrieveCities();</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在相应城市列表信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>列表形式展示城市的详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.retrieveBizRegions</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<String> retrieveBizRegions()();</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在相应商圈列表信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>列表形式展示商圈的详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>列表形式展示城市的详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.retrieveOrdered</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<HotelVO> retrieveOrdered(String bizRegion,String city,Integer userId);</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在相应酒店信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>更新酒店的详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>HotelServiceImpl.searchHotel</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>public List<HotelVO> searchHotel(String bizRegion, String city, String hotelName);</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在相应酒店信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>根据条件返回对应的酒店详细信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.userForm</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>用户信息表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>HotelMapper.addHotel(HotelVO hotelVO)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>HotelMapper.updateRoomNum(Integer hotelId, String roomType, Integer rooms)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>以列表形式获取所有身份类型为Hotel的用户单一持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> HotelMapper.getRoomCurNum(Integer hotelId, String roomType)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据酒店ID删除一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> HotelMapper.moveUser(int userId)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据用户ID删除一个用户持久化对象</p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+RoomServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        RoomServiceImpl.retrieveHotelRoomInfo
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+        public List<HotelRoom> retrieveHotelRoomInfo(Integer hotelId)
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        数据库中存在对应的房间信息
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        更新房间id对应的房间信息
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        RoomServiceImpl.insertRoomInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public void insertRoomInfo(HotelRoom hotelRoom);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        数据库中存在相应的房间数据
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        插入房间信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        RoomServiceImpl.updateRoomInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public ResponseVO updateRoomInfo(Integer id,Double price,Integer total,Integer curNum)
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的房间id</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>更新房间id对应的房间信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>RoomServiceImpl.getRoomCurNum</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public int getRoomCurNum(Integer hotelId, String roomType)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库存在相应的房间数据</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>获取当前的房间Num</p>
+      </td>
+    </tr> 
+     <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            RoomServiceImpl.moveRoom
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            public RoomVO moveRoom(Integer roomId)
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的房间id</p>
+          </td>
+     </tr>
+    <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>删除房间id对应的详细信息</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            <p>RoomServiceImpl.getRoomInfo</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>public HotelRoom getRoomInfo(Integer roomId);</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应房间id的详细信息</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>以列表形式返回房间id的详细信息</p>
+          </td>
+        </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.userForm</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>用户信息表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>RoomMapper.retrieveHotelRoomInfo(Integer hotelId)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>获取房间信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>RoomMapper.updateRoomInfo(Integer id,Double price,Integer total,Integer curNum)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>以列表形式获取所有身份类型为Room的用户单一持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> RoomMapper.insertRoomInfo(HotelRoom hotelRoom)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>插入一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> RoomMapper.moveRoom(Integer roomId)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据用户ID删除一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>RoomMapper.getRoomInfo(Integer roomId)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         返回房间的详细信息
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当网站管理员填写好需要添加的用户表单时，网站管理员业务逻辑处理的相关对象之间的协作。
+
+![addManager动态模型]()
+
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
 #### 4.1.4 orderbl模块
 
 ##### 需要的服务
